# Daem0n-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_INSTRUCTIONS.md  Banish_Daem0n.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  Summon_Daem0n.md  change_analyzer.py  database.py  decision_tracker.py  docker-compose.yml  opencode.json  process_manager.py  pyproject.toml  requirements.txt  server.py  setup.py  start_daem0nmcp_server.bat  start_server.py  test_server_fixed.py  test_server_fixed_backup.py  thought_processor.py  tool_registry.py
.claude-plugin/: plugin.json
.opencode/: package-lock.json
daem0nmcp/: __init__.py  __main__.py  cli.py  code_indexer.py  communities.py  config.py  covenant.py  database.py  hooks.py  links.py  logging_config.py  memory.py  models.py  rules.py  server.py  vectors.py
devilmcp/: browser.py  cli.py  context_manager.py  executor.py  memory.py  models.py  process_manager.py  server.py  subprocess_executor.py  vectors.py
docker/: entrypoint.sh
docs/: QUICKSTART.md  SETUP.md  automatic-memory-setup.md  condensed_docstrings.py  index.html  opencode-setup.md
hooks/: daem0n_pre_edit_hook.py  daem0n_prompt_hook.py  daem0n_stop_hook.py  settings.json.example
scripts/: condense_docstrings.py  migrate_db_indexes.py  migrate_legacy_data.py  migrate_to_v2.py  pre-commit  quick-setup.ps1  quick-setup.sh  setup-opencode.ps1
tests/: conftest.py  test_active_context.py  test_bootstrap.py  test_code_entity_fidelity.py  test_communities.py  test_compact.py  test_context_triggers.py  test_covenant.py  test_enforcement.py  test_executor.py  test_git.py  test_graph.py  test_incremental_indexing.py  test_ingest.py  test_integration.py  test_linked_projects.py  test_memory.py  test_migrations.py  test_native_executors.py  test_performance_ux.py  test_resources.py  test_search_quality.py  test_temporal.py  (+1 more)
(+20 files in other folders)
