[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devilmcp"
version = "1.0.0"
description = "Extremely powerful MCP server for AI agent context management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DevilMCP"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.2",
    "astroid>=3.0.0",
    "radon>=6.0.1",
    "gitpython>=3.1.40",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "toml>=0.10.2",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
devilmcp = "devilmcp.server:main"

[project.urls]
Homepage = "https://github.com/DasBluEyedDevil/DevilMCP"
Repository = "https://github.com/DasBluEyedDevil/DevilMCP"

[tool.setuptools.packages.find]
where = ["."]
include = ["devilmcp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
